--- a/view.html
+++ b/view.html
@@ -42,7 +42,7 @@
   <script>
     // SECURITY ISSUE: Token should never be exposed in frontend code
     // Should be moved to backend environment variables
-    const DROPBOX_TOKEN = 'sl.u.AFuVTLbYpGDGQC6DdsoJMTz-t9BvkvljqnMRc4KCvkBd7WSZR6Y3SlgQxZ-gcomMCCZz9MO7Y_STTd_hReEtppNiqDBQSFLzyIXB5whw0V_Edaxr5i4f135JK8DQIQWN4jOMkTtY2YadBYrQCvPHgpKyejfjR9_w_zAXZDfvb4y-gy2seQgr5Ec39PuJy9xoHlWuWQFLmAzO8uKkMqCNkU-VriNBogcbcVtzYPvSVnCNoavltCvjPt2BCOCy5wzJ4OxbkoREbfA9OD34yU_xrU46KOrmv0pqqyuNc47_OK5Xz9aAQEcxGcumulBfBsLYHXQjPNcHW0at1vnUD7TVbQ9e5ThGG-NQV_wA9AZ0AKCrKtAozC19WeK9IWQZ1rY2JdIeKuwWWcZTvGYCrabiGvU1WGfkRqw0U3Sl3LS8KcLesKR95sJsJxGgNRyZMXE2T6rYoDRjFVbHyrwNDL2OzuiAnPd_nZPJ593J2-YQBRXY4f4qckV-8NskuasCCwTpboi1pGYsH23n7squTVwgMrz_h9cXGvSz3wYzmN5asPOg8gmSna0uCmpU-4eZ3O4RkNfBDvCIj1uV-xC-QxPcw08BkOsRThOkgvzIBby7lGL9Hw8q45BjbtUF-1KXHUT2b5_Y-HEXauAZ9pYFLk8Gvo2d4jnASpi1pC3aLhHCnvuW4XIBqnGHnMlfxFMEqkWHqEI6lTC4l5rTfQlznyF3YUiYNCUtuHQRVTlsVA32oyiUe9AtHH4XHR-0Emy-nYNK-2rhXpU8Vrked5_xhWqZpXXth5XO4uKHAgJFUCXaSt5yG872DjOFtKW1EhF-Hc96Tc9Toxlf2p7lLzt5iYhaMc3wWgOaCcJv2UIKhRpyXj9Ld1j3hCitDFX-6n2b9FIKA3lgM5hKDzyM1wUDnbHDvZa1jC48aR1jevXuyUu0MHjgrNlKDHSKpHZiYY7hwieYXX25ACav6GLLbx5aRG1EPCMLdlbvcbQTkdweTYfuM9j91bR5SMLDyIwtPXRfxznQ42dmQuQauDufuO7yq1G-hPxZl3Gqx76TvsrnGDWP1jv37Cfrke7m5V96Es5hQu-8e0BdCxzK_n_0hLJorDOTMyWxrs39JGrsmhDQHJbUooQ4TXwDr88gbYqR7hB1c9g-8yHripmG1ZTo18sgJEQ8LNRHCVViQtU_EFS3oy6bmgh7D04nVW56-SMNKf1jm0TH_rEFTXFKamLtWDrIz7kikYGD-oreyMF9IgGQvbaPKj58kG_dQFQzLSwLbHrTGlWM7md0lRlFrWn-qbglwNYd7Qk6'; // Replace with secure backend authentication
+    const DROPBOX_TOKEN = ''; // Replace with secure backend authentication
     const DROPBOX_FOLDER = '/snapshots';
     
     async function listDropboxFiles() {
